# company-research

./: .gitignore  pyproject.toml  template.env
notebooks/: company_research.ipynb
