[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "company-research-agent"
version = "0.1.0"
description = "A research agent for company analysis"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["company", "research", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "aiohappyeyeballs==2.4.4",
  "aiohttp==3.11.11",
  "aiosignal==1.3.2",
  "annotated-types==0.7.0",
  "anyio==4.8.0",
  "asttokens==3.0.0",
  "attrs==25.1.0",
  "build==1.2.2.post1",
  "cachecontrol==0.14.2",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "cleo==2.1.0",
  "comm==0.2.2",
  "crashtest==0.4.1",
  "cryptography==44.0.0",
  "dataclasses-json==0.6.7",
  "debugpy==1.8.12",
  "decorator==5.1.1",
  "distlib==0.3.9",
  "distro==1.9.0",
  "dulwich==0.22.7",
  "executing==2.2.0",
  "fastjsonschema==2.21.1",
  "filelock==3.17.0",
  "fpdf==1.7.2",
  "frozenlist==1.5.0",
  "greenlet==3.1.1",
  "h11==0.14.0",
  "httpcore==1.0.7",
  "httpx==0.28.1",
  "httpx-sse==0.4.0",
  "idna==3.10",
  "installer==0.7.0",
  "ipykernel==6.29.5",
  "ipython==8.32.0",
  "jaraco-classes==3.4.0",
  "jaraco-context==6.0.1",
  "jaraco-functools==4.1.0",
  "jedi==0.19.2",
  "jeepney==0.8.0",
  "jiter==0.8.2",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jupyter-client==8.6.3",
  "jupyter-core==5.7.2",
  "keyring==25.6.0",
  "langchain==0.3.17",
  "langchain-community==0.3.16",
  "langchain-core==0.3.33",
  "langchain-openai==0.3.3",
  "langchain-text-splitters==0.3.5",
  "langgraph==0.2.69",
  "langgraph-checkpoint==2.0.10",
  "langgraph-sdk==0.1.51",
  "langsmith==0.3.4",
  "marshmallow==3.26.0",
  "matplotlib-inline==0.1.7",
  "more-itertools==10.6.0",
  "msgpack==1.1.0",
  "multidict==6.1.0",
  "mypy-extensions==1.0.0",
  "nest-asyncio==1.6.0",
  "numpy==2.2.2",
  "openai==1.61.0",
  "orjson==3.10.15",
  "packaging==24.2",
  "parso==0.8.4",
  "pexpect==4.9.0",
  "pkginfo==1.12.0",
  "platformdirs==4.3.6",
  "poetry==2.0.1",
  "poetry-core==2.0.1",
  "prompt-toolkit==3.0.50",
  "propcache==0.2.1",
  "psutil==6.1.1",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycparser==2.22",
  "pydantic==2.10.6",
  "pydantic-core==2.27.2",
  "pydantic-settings==2.7.1",
  "pygments==2.19.1",
  "pyproject-hooks==1.2.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "pyzmq==26.2.1",
  "rapidfuzz==3.12.1",
  "regex==2024.11.6",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "secretstorage==3.3.3",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sqlalchemy==2.0.37",
  "stack-data==0.6.3",
  "tavily-python==0.5.0",
  "tenacity==9.0.0",
  "tiktoken==0.8.0",
  "tomlkit==0.13.2",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "trove-classifiers==2025.1.15.22",
  "typing-extensions==4.12.2",
  "typing-inspect==0.9.0",
  "urllib3==2.3.0",
  "virtualenv==20.29.1",
  "wcwidth==0.2.13",
  "yarl==1.18.3",
  "zstandard==0.23.0"
]
requires-python = "==3.12.8"

[tool.poetry]
packages = []
